@@ -14,6 +14,10 @@ http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).
 Eventually this branch will be merged with the development on the
 trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.
 
+7/24/2001: cheetah (william fulton)
+	   * [Java] Underscores in the package name and/or module name
+	   no longer give linking problems.
+
 7/17/2001: cheetah (william fulton)
 	   * More parser bug fixes for constant pointers
 
